<resources>
    <string name="app_name">DrawView Library</string>

    <string name="stroke_width">Stroke width: %1$d</string>
    <string name="opacity">Opacity: %1$d</string>
    <string name="font_size">Font size: %1$d</string>

    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="functions">Functions</string>
    <string name="draw_attrs">Draw attributes</string>
    <string name="background">Background image</string>
    <string name="draw_tool">Draw tool</string>
    <string name="draw_mode">Draw mode</string>
    <string name="save_draw">Save draw</string>
    <string name="camera_option">DrawCameraView option</string>
    <string name="draw_option">DrawView option</string>
    <string name="exclude_back_eraser">Exclude back at eraser</string>

    <!-- DIALOGS -->
    <string name="choose_draw_mode_tile">Select draw mode</string>
    <string name="choose_draw_tool_tile">Select draw tool</string>
    <string name="choose_draw_tool_sides_title">Select side number</string>
    <string name="choose_background_title">BACKGROUND</string>
    <string name="choose_background_url">URL of the image</string>
    <string name="choose_background_url_default">http://hdqwalls.com/wallpapers/deadpool-abstract-art.jpg</string>
    <string name="request_text_title">Write a text</string>
    <string name="request_text">Requested text</string>

    <!-- ADS -->
    <string name="banner_ad_unit_id">ca-app-pub-6238951090454835/7400289908</string>
    <string name="banner_ad_unit_id2">ca-app-pub-6238951090454835/5923556703</string>
</resources>
