<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:enabled="false"
        android:icon="@drawable/ic_action_content_undo_disabled"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_redo"
        android:enabled="false"
        android:icon="@drawable/ic_action_content_redo_disabled"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_new_functions"
        android:icon="@drawable/ic_action_more_vert"
        android:title="@string/functions"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_clear_history"
                android:icon="@null"
                android:title="清空历史"
                app:showAsAction="always" />
            <item
                android:id="@+id/action_switch"
                android:icon="@null"
                android:title="绘制开关"
                app:showAsAction="always" />
        </menu>
    </item>


    <item
        android:id="@+id/action_functions"
        android:icon="@drawable/ic_action_more_vert"
        android:title="@string/functions"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_draw_attrs"
                android:icon="@drawable/ic_action_palette"
                android:title="@string/draw_attrs" />
            <item
                android:id="@+id/action_draw_background"
                android:icon="@drawable/ic_action_image"
                android:title="@string/background" />
            <item
                android:id="@+id/action_draw_tool"
                android:icon="@drawable/ic_action_brush"
                android:title="@string/draw_tool" />
            <item
                android:id="@+id/action_draw_mode"
                android:icon="@drawable/ic_action_edit"
                android:title="@string/draw_mode" />
            <item
                android:id="@+id/action_draw_save"
                android:icon="@drawable/ic_action_save"
                android:title="@string/save_draw" />
            <item
                android:id="@+id/action_view_camera_option"
                android:icon="@drawable/ic_action_photo_camera"
                android:title="@string/camera_option" />
        </menu>
    </item>

</menu>